# forwarder

./: .eslintrc.json  .gitignore  CMakeLists.txt  README  README.md  build_dll.bat  build_dll.sh  build_exe.bat  build_exe.sh  build_mac.sh  build_mac_so.sh  config.json  cp.sh  main.cpp
build_ubuntu/: CMakeCache.txt
core/: CMakeLists.txt  SConstruct  main.cpp  makefile
core/lib/: enet.lib  libenet.so.7.0.1
csharp-binding/: Forwarder.cs  ForwarderIOS.cs  ForwarderWin.cs  binding.cpp  binding.h
doc/: Design.graphml  header.xlsx
docker/: Dockerfile
include/: aes.h  base.h  base64.h  defines.h  forwardbase.h  forwardclient.h  forwardctrl.h  forwardheader.h  forwardpacket.h  forwardserver.h  uniqid.h  utils.h
include/pool/: pool.h
include/zlib/: zlib.h
jsb-binding/: jsb_forwarder_auto.cpp  jsb_forwarder_auto.h  netmgr.js
main/: main.cpp
src/: aes.cpp  aes_core.cpp  ctr128.cpp  forwardctrl.cpp  forwardserver.cpp  main.cpp  uniqid.cpp  utils.cpp
test/: base64.js  client.js  client_c.js  client_gs.js  forwardctrl.js  forwarddifines.js  forwarder.js  forwardserver.js  forwarduniqid.js  netmgr.js  testbase64.js  ws.html  ws.js
